SERVER-68128 Avoid closing connections when generating command response throws BSONObjectTooLarge